--- a/src/styles.css
+++ b/src/styles.css
@@ -22,15 +22,25 @@
   /* background-color: red; */
 }
 
-.vertex{
-  background-color: rebeccapurple;
+.node{
   position: absolute;
+  background-color: white;
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .formGroup {
   display: flex;
   flex-direction: column;
+}
+
+.arrow-container{
+  width: 100%;
+  height: 100%;
+  /* background-color: red; */
 }
