--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,12 @@
 }
 
 .path{
+  padding: 0 10px;
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
+}
+.path h4 {
+  color: red;
 }
